force-app/main/default/objects/FNS_RelatedRoles__c/FNS_RelatedRoles__c.object-meta.xml
<CustomObject>
    <label>Application Roles</label>
    <nameField>
        <label>Application Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>