force-app/main/default/objects/FNS_RelatedRoles__c/fields/FNS_AccountName__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ApplicationAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>