force-app/main/default/objects/FNS_RelatedRoles__c/fields/FNS_Application__c.field-meta.xml
<CustomField>
    <fullName>FNS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applications</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>