force-app/main/default/objects/FNS_RelatedRoles__c/fields/FNS_ApplicationExternalId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationExternalId__c</fullName>
    <formula>FNS_Application__r.FNS_ApplicationExtId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application External Id</label>
    <type>Text</type>
</CustomField>