force-app/main/default/objects/FNS_RelatedRoles__c/fields/FNS_Contact__c.field-meta.xml
<CustomField>
    <fullName>FNS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ApplicationContacts</relationshipName>
    <type>Lookup</type>
</CustomField>