force-app/main/default/objects/FNS_RelatedRoles__c/fields/FNS_GuaranteePercent__c.field-meta.xml
<CustomField>
    <fullName>FNS_GuaranteePercent__c</fullName>
    <label>Guarantee(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>