force-app/main/default/objects/FNS_RelatedRoles__c/fields/FNS_RoleOfEntity__c.field-meta.xml
<CustomField>
    <fullName>FNS_RoleOfEntity__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Grantor</fullName>
            </value>            
        </valueSetDefinition>
    </valueSet>
</CustomField>