force-app/main/default/objects/FNS_RelatedRoles__c/fields/FNS_Type__c.field-meta.xml
<CustomField>
    <fullName>FNS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>