force-app/main/default/objects/FNS_RelatedRoles__c/recordTypes/FNS_RelatedRoles.recordType-meta.xml
<RecordType>
    <fullName>FNS_RelatedRoles</fullName>
    <active>true</active>
    <label>Related Roles</label>
</RecordType>