force-app/main/default/objects/FNS_RelatedRoles__c/recordTypes/FNS_RelatedRolesReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_RelatedRolesReadOnly</fullName>
    <active>true</active>
    <label>Related Roles Read Only</label>
</RecordType>